fixed navbar issues on small screens

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -126,6 +126,7 @@ body {
 @media screen and (max-width: 993px) {
     .navTrigger {
         display: block;
+        z-index: 21;
     }
 
     #mainListDiv {
@@ -155,11 +156,11 @@ body {
     .main-nav div.main_list ul {
         flex-direction: column;
         width: 100%;
-        height: 19rem; /*70vh;*/
+        height: 16rem; /*70vh;*/
         right: 0;
         left: 0;
         bottom: 0;
-        background: #FFFFFF;
+        background: #ffffff;
         background-position: center top;
         border-radius: 10px;
     }
@@ -168,7 +169,10 @@ body {
         width: 100%;
         height: 50px;
         text-align: center;
-        padding-top: 15px;
+    }
+
+    .main-nav div.main_list ul li:hover {
+
     }
 
     .main-nav div.main_list ul li a {
@@ -190,7 +194,7 @@ body {
     position: absolute;
     right: 30px;
     top: 35px;
-    bottom: 0;
+    /*bottom: 0;*/
 }
 
 .navTrigger i {
@@ -466,11 +470,12 @@ body {
     position: relative;
     font-family: 'Droid Serif', serif;
     color: #fff;
-    right: 0;
-    left: 0;
-    margin: 20px;
+    /*right: 0;*/
+    /*left: 0;*/
+    padding: 5px;
+    margin-bottom: 25px;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 7px;
     box-shadow: 0px 10px 20px -9px rgba(0, 0, 0, 0.5);
     text-align: center;
     transition: all 0.2s;
